feat: implement queue read summary
